syntax = "proto3";

package techschool.pcbook;

option go_package = "./pb";
option java_package = "com.gitlab.techschool.pcbook.pb";
option java_multiple_files = true;

import "laptop_message.proto";
import "filter_message.proto";

message CreateLaptopRequest { Laptop laptop = 1; }

message CreateLaptopResponse { string id = 1; }

message SearchLaptopRequest { Filter filter = 1; }

message SearchLaptopResponse { Laptop laptop = 1; }

// 将Image切分为一块块数据，每一个Request当中包含一块数据
message UploadImageRequest {
  oneof data {
    ImageInfo info = 1;   // First request will only contain the metadata
    bytes chunk_data = 2; // And the following request will contain the image data chunks
  };
}

message ImageInfo {
  string laptop_id = 1;
  string image_type = 2;
}

message UploadImageResponse {
  string id = 1;
  uint32 size = 2;  // the total size of the uploaded image in bytes
}
//
//message RateLaptopRequest {
//  string laptop_id = 1;
//  double score = 2;
//}

//message RateLaptopResponse {
//  string laptop_id = 1;
//  uint32 rated_count = 2;
//  double average_score = 3;
//}

service LaptopService {
  // unary client and unary server
  rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};

  // server-streaming
  rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse){};

  // client-streaming
  rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse){};
}